--- a/asu-tui-linux-tool-for-windows/pom.xml
+++ b/asu-tui-linux-tool-for-windows/pom.xml
@@ -21,7 +21,7 @@
         </dependency>
         <dependency>
             <groupId>me.asu</groupId>
-            <artifactId>asu-tui-builtin</artifactId>
+            <artifactId>asu-tui-core</artifactId>
             <version>1.1.0-SNAPSHOT</version>
         </dependency>
 
